@@ -1,25 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 50template-gentoo.el 1008 SHA256 b983365e39b29bc6d6e9799f687b863809585f3bfeecbcfbf84e400c2fe0fd8c SHA512 a563c759acfa1bdbd3e34510d470f39a0c7f21a04ec06ccd0f67f3988f26d2eae3fcf88a1c1c227a0d114a4c50e46c3c6d1a4493907f637083a6dea2f3bc40b2 WHIRLPOOL 0ba57031801a797edc72e531ab1f3609d77950a1ece333056dc6c5a4f36a5a4154d06368da7367149e189d5c8842ffd35c444f239642c29e93c779e07fa6e597
+AUX 50template-gentoo.el 968 SHA256 863761052d393649d241927d429fe231a6cba5f74dae7148b820d2061147d895 SHA512 a6c4fd122ae1daa7e0a07b259dba0581cdd7868d220c107c6979ef5f842659dc51c0573948979d9907241918686b48da4a89baff33abdcb12bfb30941a068396 WHIRLPOOL 088bcb445758437149273a61e26691358c3af140c26a97bab1c73d7983b6fe8a5076853873fa0c23061c11aa32d3ce18c0b5333d07a48b6cdd6220d452a3b863
 DIST template-3.1c.tar.gz 37903 SHA256 d71885ec8d230a5a7cc909f052b97ed7cc30423ca0e2647392424dfd10459845 SHA512 d9fee39b67ff986d7c2dccbd09af3ce208f0e1a616a406fefefe4a6399f69a3527fa5609e87d41f7ceec5bf95818a62cb8da62994b28945998f8a9074821914c WHIRLPOOL 57043085455aefc5a378fa0d48525d823345932d67c34ceee1c5106481d468c1e9fb8559d511f4184d326e71bd46b9416d92f0c080de04607f559da34c163683
-EBUILD template-3.1c.ebuild 909 SHA256 dc561b702a6d5a9146352d3c742b34eef0b5a58dccbfe24c806a8f3cc3512752 SHA512 9e174defd9b680f4e1fe0cca7fac11286fda4521834de48bb559a8539232fa922ce37b1627ff7ab05b9081b04fad426d2e81d3fe5276b98b5642a03d04737db6 WHIRLPOOL cab65c395d4f684d969e2290e49a1980bb981d36be5629fe3d20516bd723191b5d9926966fddc7604e53313a5e0aa3001eda5cea2e78e3c11ec06a89d02baad5
-MISC ChangeLog 477 SHA256 e299a67163a7f8e7069a285b57cd9e85236c54567afe8d344ee10086a12a35f2 SHA512 3f6c474d8bf9f3027ac83f7819b0fca8fcf4e736757fd4cf8c60659a812df93b32f804dab581c974321d8b31eb97e04a311f98b05ca5668d3b9028082cee8fb2 WHIRLPOOL 54e03713d653e75d1b95fbeaa38af67cf4e3029fd45662b348566c87470c5cccfa5fce31dc9619909bf666cd5375b18b4b15cfbf46154fcaec6101cb0d0b0efc
+EBUILD template-3.1c-r1.ebuild 751 SHA256 2cb7b4432cf6f18c9efae9662686cf6937b0733707d1bdcedaaddaccab04bb75 SHA512 b9c628228063825b489f4f607802945007513b526b9bc04bd035af72d1b2ad7c97b849c9e337b08cd9040a08cfcff913b9f3873f643f39667b20347c60dbfc16 WHIRLPOOL 2a5044cea0a8f791d993cb1887df7466f072d1c13bed82f3cde182c9dc5b7c58865c4c1f6389d42eb24b020bd5368613476378beaba9d909e4bb5e88c9254f3c
+MISC ChangeLog 677 SHA256 c9762a6f1698cc10a4dbcd579ca8cbc0b386ce74487d76558bb41fc52ac0c823 SHA512 95a994cb755e933a48fb5fdc584b2c67ed46f2961ac91d85059ce4f745e3e652a2af3ff3b889ac29b538b3f44bf9ef1422fbf77d170f8916969a0a54697a3e6c WHIRLPOOL ff104de81b1b6c194d3a55342881d72cabdbeedbb9f2a30b900826de81dba020a442e866f1226f86a22e9583e464d58d1991d6ee82568f97fc2fd94dae93960c
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9fWBAAoJEDxpGckxwJCBheMP/2u3plRTb/aPX3GI5c3eqjS4
-2hMks/9dfMIvGPPB7Raov/A03zR1oWQMKu9wF/fVJSCyuyrtcGci7d/4I8TvFnlB
-jMapbAlW1jNPGbT1BKXeC+KhY8xpPM33Q+4Nzh2QVJF0To79CcjH+a2/JGTkk+e7
-jfRhSXSebTjIdsFg3YJmXxu0X9Gc7i+1NCGOmd5cm0HAzMlyJXHSa5fDUZuLJhv1
-wo+HkzRcAk2UW0jh9Wx0HKtKY73tWzLQJukdXQLXO+7e1Zs7QPV66pbgXl6Oyhs8
-2AO7FzjAJztaMgM4H0sSCPEB/HhZWOUBy7M1edJR/d4wNXY1wZQnJPdBIpwPEpqg
-0eWJeEBihV6bOcX3G0XvOdDJrnUwHTp7cx895vo/Q83/Nd5JkCMTYkBqlEi80EbO
-PaQTUTPwRyqUesyiEPxxc9hLn5gzIaK9ci/zfD3nMHaviKCALNb07SppfKKR/r94
-tSCVqr8DDODvHjnUmr0a2FKqUrhGe1JZvYNqPEdmWzy0ua6VR50HT7KSDjIiGCzY
-kmN/gsBkRms3xGWxTCGJPplNzrQJjE0E1zIP8nIz6QotkhdUpcrox4/MGo4LDqsZ
-FYMwMT2DaHXIEXpAIco+gwoUpqS89RHxpYWz9YGLFM+ItnQ0JezXLKFvhaWzt3db
-brzuF+nfVi0Al2OfxLq8
-=e42+
+iQGcBAEBCAAGBQJS/kkQAAoJEJQzkH1pP7W4UdAL+gL/vFJwUD07d2CwlPtbAsX9
+AgMFwL2P0xu3AtD6MPjrcynZBoRlh0DtXTxcB2h6fAdCsw5564K4NC0OPpUHZb46
+itEr2mBbF773/8StfiKVBCR03p8pdVlYBg1byKVP4fiATi+diyuZssT4ae5mgAV3
+DM1iOwXeuapQMDjHrd7PIaEiZL6Bwi4TSGZ1smXKezTv82ST1xekECFMU0lW7/qt
+d7lQ/Y4zm3UOAgxwosftETPT3dfcl3SOasozrm3QxLkYea/H9KjhuA4db53v9iNu
+Pe08b4+IHYzUO2DvwOLjkm0R5qsHR/kaSLyOiJ0bWjq+RTpYi/8EetU1mwwST2Z4
+kJKgDWV4eomf04MPFreeSPS8Pg78OgF5Yiqkm4LXQEkD6FBj3RLRsC1dPnq8FuTP
+jbJQXntzNure2IC/KH07Ip3gpJU8Hlg3bVPrPt291ck4BHPoI7X28FlFPHqfMC9u
+QyrDEZA6IW8rKs0eQIGAiOD/VPxrQ0Y/A8Ip/C2m7A==
+=0len
 -----END PGP SIGNATURE-----
