@@ -1,25 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 50tempo-snippets-gentoo.el 133 SHA256 a12fb321121f945e9745376c742267a2015837437ce8d0126e3b83b2f860be45 SHA512 f96184f924c144be3cca62ff1b8efc271348582fcc37f8103db1a84bb68bc60d2fea34d1f936f776189705e3ed844269d8e28a93d4e3d8ab8606232673ff2807 WHIRLPOOL 68cdfd49220f7e99ac063b0759a317ca68ddbc040c9c1a1c2660afd9bb99635e8c9726035da64726dcde61bb777d6bbffd7928df9e240e3c430167abe43b175b
+AUX 50tempo-snippets-gentoo.el 88 SHA256 45a19f98826993f2afc5f219b468ee1766cee7011fedce0f48d4ac34c05372fb SHA512 aaeaf81327283a4f482c08b6bf78f0e60154e76ec2df15aafb213b5d25d54778a26e204e0c5cc7816aa4a82add11e6291332cd1f6130c77be92b72406994e88e WHIRLPOOL bce6d3ed0848eb0e21ee07aaec4e617815c2e133ac3f330ba7ab911010ed33b5a7bf62eda1953b37df0d0b3960087c163db66be7f7b71fb40c571fd26bb21889
 DIST tempo-snippets-0.1.5.el.bz2 5369 SHA256 fba98dfe5f8c37fd9367a8ec26cebfb09c483a8667c5f1a29d22c51dabcbd573 SHA512 77b739d3c9def0abc422daee372cdf5602ed79b7cb154125a0aa3ca99e24b025c070fbb8439638ce35849243efadc9cddf187debc53905242ab417ec79acacec WHIRLPOOL e568081d78e53c80dbc80903fd6a282eb618e2613c36ca7942025ec9414acc69b4de760285c1e37fe588d145905cbead2ec72f553ca562f10a8ad767f36439de
-EBUILD tempo-snippets-0.1.5.ebuild 542 SHA256 b0b82a298ae326e3533bcf53dfe4fada2748eb94deb0eb5097811443cc80c356 SHA512 8eba951371cafb9ec6f7b9abf9e0eef70e3770c581ea69639b98af938a72fa79ebc8570a9fa7bc527d3ba958f4cff6e6739729faa5a53b4cff01d12087160f1b WHIRLPOOL 4368145c522dab4a9ed23d49168b31aaa4b15b95e300e545c6aafe8fb766c7402d031f6f428eb9e2ac39311755cce7a72a5a54bf6f2490b7308ddf996e70a2c9
-MISC ChangeLog 724 SHA256 be3fa94cd2dad5e15b5dcc6ad2c5eaeec32d65216d2d4b4f67de8c65cbfc8786 SHA512 977838e1502783498fa96b08a90c5ed575c7742af92ed115acbfd7285f9b7b3e4a52bc15b73d19e487cf764b47248b06106b218b74a9a3b0e8c7adfbaf42bd1e WHIRLPOOL bdf3d3be6b7ae8682e8bf0975623154a6fd1c8ac97510b36c6da8c7a3f7f9a83c55051eef24e3bc70c1f222a7dcad8fd2737f7140ade7c28eff368c858c82a0e
+EBUILD tempo-snippets-0.1.5.ebuild 565 SHA256 e4d2759a0f1e3a8e5a6be9c44b689c0b8f8f36ab1428bab24afc2dd1782529a1 SHA512 faed4540029a54002f852bee47fabdc7849184b8c8c23a591e0ffa89e16d433d560f4f65d8e3e1427d6c5c9a7e8f3696d5001a423a1b82dc93e3a1c9b2b17293 WHIRLPOOL 918da265bb3c8d667400c94737ee318769e26f11d020ad7228f78cdcb61b26b079844179d439aadd4c1c8fa8664f0ab9f496ba29eb92941165e529aa0499a7bf
+MISC ChangeLog 858 SHA256 3b390a3a85fde4c2f8a73806816a39d03fcfff899731135fa107132eb48cac32 SHA512 d093da1cb837aa2962a776ca106eb92b04b30e7c3b2deab306f2cbbc574d34b71301fc564a23bf6e397636b8fcd358a396e0b11a628b2deb55c83bfcc260e65a WHIRLPOOL 93f8f23139ffab6e9d6e3c7313bbccedebc274b90cd6a2298c108ada863e5741d257171c79035d6156b57596ba12fa5ad5ac5811943be6b98cf7d4bf1796dadb
 MISC metadata.xml 158 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab SHA512 e55d75feae933ba948ae987305ea58e36f5880f18687e8acaf91237e33e251be3ecfd5be27048f4907ea6799e0bcf784b602096dd7e2bc9c450eb5e2bb6a73d2 WHIRLPOOL 1d1676172186235a3e99ca1d148298fb24f6a089f9b7908b3c28c246c8854969835fd3742b8b81e0a30b63d76ee0be0c42bfede2416a30dfc3c8b915a147340c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9fWQAAoJEDxpGckxwJCBZysQALTCON5XT3ZuzCP2H9IPe6dS
-EDz8kyJhLD0l23wLqPDTHyNVAzu8Gn/U8W9m1Q84FDV4LHokHRdRCWi0cPVdIVZZ
-EiD2S6FbswGDaUNHJtVr0qx2L6QPGKsVefX8ka+xsI9hS5jIg/p+VCqIj1DNDz6h
-4pSBr26XoD7A43ql7eZJ1QLv/LSfh/dFFMuWEEO6q58/19hCBOS+8XaTMwB0mpNH
-JnRWSHtGh4oTmxStKC5oyopmM/8idVKvg6a/HKysq/0OUUT5p+M2AT9009tO3wg8
-Sh+cOnQjijfQN28JiHLtfHmjJdlbJ3zYdH04857hUvg9DpxcFgYSiMcPOlqhj0Yn
-kqEV3C3ipYkqAidsT3qYsz5Xr9Z7KNCoDWN+0hP4wmc3f7lhXJV7ZAjfJNm2vVAV
-HQPMoPtDrPcjXblHQQYGPQL3nP5F4ZylzgB5Gzyd5iupXsUTEtf8aYOWH4cpz6Z+
-uBQLssdoMD08PbYfCUBt0RJBsMyHI2GhxtL834yeAXoCB9oKTw8ZeTbo5JMTOQAE
-SFBHNuVLbRM4kWhXx12tNHyy05fYpOMZzbJ54Kp2rcLKRbmxH+MOkg7wtwYfPy9x
-IgycmV5/YJXx4H+1bKGEiHXMATGyvcAcYqumqdvaTCsWT08HDqzHM3ehf5cFOp7n
-MVFsZwL8ON3+zKC4jhaj
-=eYmf
+iQGcBAEBCAAGBQJS/kqnAAoJEJQzkH1pP7W4XNML/0xJVYD6BNKxJavDssLNvA3v
+o+KZp3enzEZnweYTILYQsXxnLZrJ8NB+HJwGnxpQ2ww3TliZOazZ6eKWOF6tFqqx
+gcAmIOqVe1HzZtBMeAFuz9mb2+13U7voVQX1xxRAl2jWOR3uvfKVo57nP7nmirLT
+ZqLl+4pvQBSgHLejmiricyZ02oUZCH45miH+gUynrDz4s5MNaH1CJz2JqWhpO7ey
+Q5fHH9utKzGgRX2VkFxnP2ADX0pWTiChzAQFYXpvy8v0AoLlFVWZ/ATm13pOkSHU
+LqjXwVTKqBv+XRGIusIUCtGTPJxVYw5OWxv0DS6vtcD7RCeaDYIw3bBN5YIpBYxG
+/sw6aXD4OBYAtDOj61xlXwfuncbq2aCyE4W3O3QbuFzUxBulSmk3oRZeQEsNAlxO
+jtaR3nDFAG/CIx92DSRJ93zlAfEMulJddN67pRIO7d4mJ5EV/qovltGH2kO7BDCQ
+/s7J7Cb3bQenns5jcsUXcokgOu9XhlHiHULut1Nieg==
+=CGUZ
 -----END PGP SIGNATURE-----
