@@ -1,5 +1,2 @@
-
-;;; tempo-snippets site-lisp configuration
-
 (add-to-list 'load-path "@SITELISP@")
 (autoload 'tempo-define-snippet "tempo-snippets")
