@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install postinst postrm setup unpack
+DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
 DEPEND=>=virtual/emacs-21
 DESCRIPTION=Use templates, decorate comments, auto-update buffers
+EAPI=5
 HOMEPAGE=http://emacs-template.sourceforge.net/
 KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
+LICENSE=GPL-2+
 RDEPEND=>=virtual/emacs-21
 SLOT=0
 SRC_URI=mirror://sourceforge/emacs-template/template-3.1c.tar.gz
 _eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=1db0427f89fe979bd95ca522ef995184
+_md5_=4badc424532bf1f84f19ebacde8cdadb
