@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install postinst postrm setup unpack
+DEFINED_PHASES=compile configure install postinst postrm prepare setup unpack
 DEPEND=>=virtual/emacs-22
 DESCRIPTION=Visual insertion of tempo templates
+EAPI=5
 HOMEPAGE=http://nschum.de/src/emacs/tempo-snippets/ http://www.emacswiki.org/cgi-bin/wiki/TempoSnippets
 KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
+LICENSE=GPL-2+
 RDEPEND=>=virtual/emacs-22
 SLOT=0
-SRC_URI=mirror://gentoo/tempo-snippets-0.1.5.el.bz2
+SRC_URI=http://dev.gentoo.org/~ulm/distfiles/tempo-snippets-0.1.5.el.bz2
 _eclasses_=elisp	ae11b438eee6c692e6c94c9a86999514	elisp-common	cec01e54df1bfd2fcca76a13ce2b2d27	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=1f57dba97c8900a584a759f2fff8aa1b
+_md5_=15056cd6a61417c3f90d46b1cd0eebc4
